assets/scss/import/layout/header.scss
//
// Nav : Page Navigation
//

.section--first {
  position: relative;
}
.skip-link {
  background: $black;
  text-align: center;
  color: #fff;
  top: 0;
  left: 0;
  padding: $indent__s;
  position: absolute;
  transform: translateY(-100%);
  transition: transform .3s;

  &:focus { 
    transform: translateY(0%);
    outline-color: $black;
  }
}


.header {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  justify-content: space-between;
  margin: $indent__l auto 0;
  position: relative;
  padding: $indent__s 0 0;
  background: transparent;
  align-items: flex-start;

  h1, h2 {
    margin: 0;
    text-shadow: -2px -1px 0px #ffffff;
    z-index: 1;
    padding-left: $indent__xs;
  }

  @media(min-width: $screen__l) {
    padding: 0;
    flex-direction: row;
    align-items: flex-end;

    h2 {
      font-size: 2em;
    }

  }
}

